crates/rhdl/tests/expect/maybe_init_tuple_struct.expect
  × RHDL Syntax Error
  ╰─▶ RHDL Syntax Error
     ╭─[/Users/samitbasu/Devel/rhdl/crates/rhdl/tests/ast.rs:765:34]
 764 │         let y = match p {
 765 │             Point { x: Bits::<8>(2), y } => y,
     ·                                  ┬
     ·                                  ╰── RHDL does not support this bind pattern
 766 │             Point { x, y: Bits::<8>(4) } => x,
     ╰────
  help: This pattern is not supported in RHDL.  Break it down into simpler patterns and match sequentially.
